# dynamic-watchlist

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  utils_streamlit.py  watchlist_dashboard (2).py  watchlist_dashboard.py
.devcontainer/: devcontainer.json
.github/workflows/: python-tests.yml
dynamic_watchlist_lib/: __init__.py  config.py  data_fetcher.py  metrics.py  news_events.py  sector_mapping.py  utils.py
streamlit_app/: utils_streamlit.py  watchlist_dashboard.py
tests/: test_data_fetcher.py  test_metrics.py  test_sector_mapping.py
workflows/: python-tests.yml
