[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_watchlist"
version = "0.1.0"
description = "Python library and Streamlit app for dynamic intraday watchlist metrics (pivots, VWAP, volume surges, sector deviation, futures OI, and news/events)."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Prakash Rai" }]

# Runtime dependencies
dependencies = [
  "kiteconnect>=3.0.0",
  "pandas>=1.3.0",
  "streamlit>=1.0",
  "pytz>=2021.1",
  "requests>=2.25.1"
]

[tool.setuptools.packages.find]
include = ["dynamic_watchlist_lib*"]
exclude = ["streamlit_app", "tests"]
